After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672445 - map widget does not look insensitive when the panel is locked
map widget does not look insensitive when the panel is locked
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Date and Time
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 682399 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-03-20 09:23 UTC by Allan Day
Modified: 2012-09-03 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of the locked date and time panel (142.26 KB, image/png)
2012-03-20 09:23 UTC, Allan Day
  Details
datetime: make the map insensitive when the panel is locked (368.63 KB, patch)
2012-08-22 03:17 UTC, William Jon McCann
accepted-commit_now Details | Review
how it looks (81.02 KB, image/png)
2012-09-03 16:19 UTC, Matthias Clasen
  Details
datetime: make the map insensitive when the panel is locked (368.62 KB, patch)
2012-09-03 16:21 UTC, Matthias Clasen
committed Details | Review

Description Allan Day 2012-03-20 09:23:51 UTC
Created attachment 210150 [details]
screenshot of the locked date and time panel

See the attached screenshot - it looks like you can interact with the map, even though you can't.
Comment 1 William Jon McCann 2012-08-22 00:20:17 UTC
*** Bug 682399 has been marked as a duplicate of this bug. ***
Comment 2 William Jon McCann 2012-08-22 03:17:17 UTC
Created attachment 222096 [details] [review]
datetime: make the map insensitive when the panel is locked
Comment 3 Bastien Nocera 2012-08-22 11:20:25 UTC
Review of attachment 222096 [details] [review]:

We should probably simply use gtk_render_icon() in draw() instead, meaning that it would automatically follow the state of the widget.
See: http://git.gnome.org/browse/gtk+/tree/gtk/gtkimage.c#n1369
Comment 4 Cosimo Cecchi 2012-08-30 21:01:23 UTC
(In reply to comment #3)

> We should probably simply use gtk_render_icon() in draw() instead, meaning that
> it would automatically follow the state of the widget.
> See: http://git.gnome.org/browse/gtk+/tree/gtk/gtkimage.c#n1369

gtk_render_icon() does no such magic; the reason why it works in GtkImage is because GtkIconHelper ensures a stated pixbuf when creating it from the GIcon or icon_name descriptions [1] - it doesn't do it if you e.g. set a GdkPixbuf yourself on the GtkImage.

Also, those functions are really targeted towards icons (gtk_render_icon() will e.g. apply CSS shadows); I think shipping a different set of images altogether here is a fine solution.

[1] http://git.gnome.org/browse/gtk+/tree/gtk/gtkiconhelper.c#n185
Comment 5 Matthias Clasen 2012-08-30 21:13:29 UTC
Bastien, given the information in comment 4, can we commit this as-is ?
Comment 6 Bastien Nocera 2012-09-03 15:31:57 UTC
(In reply to comment #5)
> Bastien, given the information in comment 4, can we commit this as-is ?

Yep, fine by me.
Comment 7 Matthias Clasen 2012-09-03 16:19:48 UTC
Created attachment 223344 [details]
how it looks
Comment 8 Matthias Clasen 2012-09-03 16:21:22 UTC
The following fix has been pushed:
0703d54 datetime: make the map insensitive when the panel is locked
Comment 9 Matthias Clasen 2012-09-03 16:21:25 UTC
Created attachment 223345 [details] [review]
datetime: make the map insensitive when the panel is locked