datetime: make the map insensitive when the panel is locked

https://bugzilla.gnome.org/show_bug.cgi?id=672445